fix swagger configuration
